feat: have inventory helpers (ingredients & tools)
