# project/parttofe/partto/src/api/parttopost.ts
@@ -38,6 +38,8 @@ type WireBody = {
     name: string;
     duration: number;
     description: string;
+    ingredients?: Array<string>;
+    tools?: Array<string>;
     depends?: Array<string>;
     engagement?: number | undefined;
   }>;
@@ -87,6 +89,12 @@ export const doParttoPost = async ({
         name: bodyMarshalers.required["string"](value.name),
         duration: bodyMarshalers.required["duration"](value.duration),
         description: bodyMarshalers.required["string"](value.description),
+        ingredients: value.ingredients?.map((value) =>
+          bodyMarshalers.required["string"](value),
+        ),
+        tools: value.tools?.map((value) =>
+          bodyMarshalers.required["string"](value),
+        ),
         depends: value.depends?.map((value) =>
           bodyMarshalers.required["string"](value),
         ),
